@@ -2033,7 +2033,7 @@ xfrd_handle_incoming_notify(xfrd_zone_t* zone, xfrd_soa_t* soa)
 		xfrd_set_zone_state(zone, xfrd_zone_refreshing);
 	}
 	/* transfer right away */
-	VERBOSITY(1, (LOG_INFO, "Handle incoming notify for zone %s",
+	DEBUG(DEBUG_XFRD,1, (LOG_INFO, "Handle incoming notify for zone %s",
 		zone->apex_str));
 	return 1;
 }
